      - snp_rmaResult.rda  (gns, sns, SNR, SKW, mixtureParams, cdfName)
      - A.rda
      - B.rda
      - cn_rmaResult.rda (SKW)

2010-02-21 R. Scharpf - committed version 1.5.27
 
** additional support for ff in crlmm and computeCopynumber functions

2010-03-02 M. Ritchie - committed version 1.5.28
 * Added message to readIDAT() warning that older style IDAT files can not be read in.
Such files arise when scanner settings contain the line <GenerateVersionTwoIdatFiles>false</GenerateVersionTwoIdatFiles>
If this is modified to <GenerateVersionTwoIdatFiles>true</GenerateVersionTwoIdatFiles>, 
then readIDAT() should work. Thanks to Pierre Cherel who reported this error.
 * Removed AllClasses.R from Collate field in DESCRIPTION file (causes an error in build)

2010-03-05 M. Ritchie - committed version 1.5.29
 * crlmmIlluminaV2() now exported.  Added man page crlmmIlluminaV2.Rd

2010-03-07 R. Scharpf committed version 1.5.30

- one can use ff in conjunction with affy platforms 5.0 and 6.0

- more s4-style code

- preprocessing / genotyping is basically the same set of commands with either illumina/affy platforms (though illumina-users may have to play with some of the options for reading idat files

- if ff package is loaded, the assayData elements are ff objects

- the classes all inherit from 'CrlmmContainer' that contains an additional slot 'options' and 'genomeAnnotation'.   options is a list with the default arguments to snprma, crlmm, etc, as well as a few global settings such as 'verbose' and 'seed'.  I added the genomeAnnotation slot simply because I want to be able to use ff-objects for the feature-level data.   Maybe with setClassUnion we could avoid adding the genomeAnnotation slot (and use featureData instead), but I didn't have much success with this.

- the batchSize argument will run the genotyping (crlmmGT) in batches to reduce the RAM.  The default is batches of size 1000.

- The crlmm.Rd file contains an example with / without ff for Affymetrix data.